--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+
+:root {
+  --navbar-height: 30px; /* Change this value to the desired height */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header {
+  background-color: #333;
   color: white;
+  padding: 15px;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  height: var(--navbar-height);
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  float: left;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  float: left;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.contentWrapper {
+  padding-top:calc(var(--navbar-height) + 30px); /* Adjust this value to create space between header and content */
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section{
+  flex: 1;
+  min-height: 60vh; /* Each section takes at least 40% of viewport height */
+}
+
+.landingSection {
+  display: flex;
+  align-items: center; /* Vertical centering */
+  justify-content: left; /* Horizontal centering */
+  text-align: center; /* Center text within the landing section */
+  width: 100%;
+  background-color: white; /* Blue background color */
+
+}
+
+.landing-image {
+  padding-left: 10vw;
+  object-fit: cover; /* This property ensures the image covers the entire container */
+}
+
+.landing-text {
+  flex: 1;
+  padding-left: 20px; /* Adjust as needed for spacing */
+  font-size: 40px;
+  text-align: left;
+}
+
+/* Add styles for the line separating the thirds */
+.separator-line {
+  border-left: 1px solid black; /* Adjust line color and style as needed */
+  height: 100%;
+  margin: 1px 20px; /* Adjust margin as needed for spacing */
+}
+
+
+
+.projectsSection {
+  background-color: black; /* Green background color */
+  display: flex;
+  width: 100%;
+}
+
+.blogSection {
+  background-color: white; /* Red background color */
+  display: flex;
+  width: 100%;
+}
+
+.contactSection {
+  background-color: black; /* Green background color */
+  display: flex;
+  width: 100%;
+}
+
+.secretSection {
+  background-color: white; /* Red background color */
+  display: flex;
+  width: 100%;
 }
